# repo-server

./: README.md  run_all.py  servers.json
fastapi/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_lint.ps1  run_lint.sh
fastapi/.github/: FUNDING.yml
fastapi/.github/workflows/: ci-gpu.yml  ci-macos.yml  ci-ruff.yml  ci-ubuntu.yml  ci-windows.yml
fastapi/app/: __init__.py  calc_model_size.py  main.py  runtime.py  toy_model.py
fastapi/app/api/: router_auth.py  router_inference.py  router_plugins.py  router_services.py  router_uploads.py  router_workflows.py
fastapi/app/core/: config.py  errors.py  logging_.py
fastapi/app/plugins/: base.py  loader.py
fastapi/app/runtime/: __init__.py  model_pool.py
fastapi/docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_STYLE_GUIDE.md  LICENSES.md  README_venv.md  RELEASE_NOTES_v0.1.0.md  architecture.html  architecture.mmd  architecture_clean.mmd  endpoints.md  imports.mmd  plugins-overview.md  runtime.mmd  services-overview.md  workflows-overview.md
fastapi/scripts/: conftest.py  generate_jwt_keys.py  install_torch.py  prefetch_models.py  print_caches.py  test_api.py
fastapi/secrets/: jwt_ec_private.pem  jwt_ec_public.pem  jwt_rsa_private.pem  jwt_rsa_public.pem
fastapi/tests/: conftest.py  test_cpu_basic.py  test_cuda.py  test_errors.py  test_inference.py  test_logging.py  test_run.py
fastapi/tools/: PLUGIN_WRAPPERS_README.md  README.md  commit_clean.py  recreate_plugin_wrappers.py
(+41 files in other folders)
