# pyproject.toml

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-fastapi-uploads"
version = "0.1.0"
description = "NeuroServe / repo-fastapi-uploads"
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Only include the "app" package, exclude accidental top-level packages
include = ["app*"]
exclude = ["secrets*", "tests*", "actions-runner*", ".github*"]

# --------------------------------
# Ruff configuration (lint/format)
# --------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
  ".venv", "venv", "build", "dist", "__pycache__", ".git"
]

[tool.ruff.lint]
# E,F,I: pycodestyle, pyflakes, isort (via Ruff)
# UP: pyupgrade, B: bugbear (logic-level lint checks)
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app", "tools"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
# Black-like formatting without Black
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"scripts/**" = ["E501"]
